--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="C:\Users\jjfra\Desktop\homework\Porforlio\porfolio-domain.css">
+    <link rel="stylesheet" href="./assets/css/porfolio.css">
     <title>Welcome to my Domain.</title>
 </head>
 
@@ -22,7 +22,7 @@
     <section class="frame"></section>
     <section class="content">
         <section id="intro" class="main-section">
-            <img src= C:\Users\jjfra\Desktop\homework\Porforlio\img\mypic.jpg class="my-pic" alt="first-image"/>
+            <img src="./assets/images/mypic.jpg" alt="first-image"/>
             <h2>Intro</h2>
             <p id="paragraph-1">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -34,7 +34,7 @@
             </p>
         </section>
         <section id="projects" class="main-section">
-            <img src="C:\Users\jjfra\Desktop\homework\Porforlio\img\s1.jpg" class="my-cass" alt="second-image"/>
+            <img src="./assets/images/s1.jpg" class="my-cass" alt="second-image"/>
             <h2>Projects</h2>
             <p id="paragraph-2">
                 Aenean egestas nisi turpis, vitae egestas turpis tincidunt vitae. Vivamus venenatis blandit
@@ -47,14 +47,14 @@
                 <p style="color:orangered">"The Trolls are going to war!"</p>
                 </aside>
             </p>
-            <section class="contact-box">
+            <section class="main-section">
                 <h2 class="project-list">Project Sample</h2>
                 <li id="github"><strong>Github:</strong> <a href="#https://github.com/JohnFranco45/Refactor-SEO-HW.git">MyGit@sample.com</a></li>
             </section>
 
         </section>
         <section id="cooking" class="main-sections">
-            <img src="C:\Users\jjfra\Desktop\homework\Porforlio\img\s3.jpg" class="random-pic" alt="third-image" />
+            <img src="./assets/images/s2.jpg" class="random-pic" alt="third-image" />
             <h2>The language we all speak</h2>
             <p id="paragraph-3">
                 Quisque vitae ullamcorper nunc. Maecenas mollis, leo et sagittis dictum, tellus nulla
@@ -73,7 +73,7 @@
             </p>
         </section>
     </section>
-    <section class="contact-box">   
+    <section id="contact-box">   
         <h2 class="Contacts">Contact Info</h2>
         <li id="email"><strong>Email:</strong> <a href="#">jjfranco.s@example.com</a></li>
         <li id="github"><strong>Github:</strong> <a href="#">MyGit@sample.com</a></li>
